# league-auto-accept

./: README.md  package-lock.json  package.json
.github/workflows/: build-release.yml  manual-build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: league_client.rs  main.rs
